--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -88,7 +88,7 @@ body.dark-mode .header-buttons button {
 }
 
 .header-buttons button:hover {
-    background-color: #0056b3;
+    background-color: #69a32b;
 }
 
 body.dark-mode .header-buttons button:hover {
