--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -95,6 +95,24 @@ body.dark-mode .header-buttons button:hover {
     background-color: rgb(102, 150, 43);
 }
 
+#theme-toggle {
+    background: none;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+}
+
+#theme-icon {
+    width: 24px;
+    height: 24px;
+    transition: transform 0.3s ease;
+}
+
+body.dark-mode #theme-icon {
+    transform: rotate(180deg);
+}
+
+
 /* Hero Section */
 .hero {
     position: relative;
