--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -42,8 +42,8 @@ button {
 
 /* Header */
 header {
-    background-color: #000000;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
     position: fixed;
     width: 100%;
     top: 0;
