--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -42,7 +42,7 @@ button {
 
 /* Header */
 header {
-    background-color: #000000;
+    background-color: #ffffff;
     box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
     position: fixed;
     width: 100%;
