--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -103,8 +103,8 @@ body.dark-mode .header-buttons button:hover {
 }
 
 #theme-icon {
-    width: 70px;
-    height: 70px;
+    width: auto;
+    height: auto;
     transition: transform 0.3s ease;
 }
 
