--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -10,9 +10,7 @@
     --color-button-dark: rgb(139, 205, 58);
 }
 
-/* LOGOUT BETA */
-
-/* From Uiverse.io by kennyotsu-monochromia */ 
+/* LOGOUT BETA */ 
 .Btn {
     --black: #000000;
     --ch-black: #141414;
@@ -164,6 +162,7 @@ body.dark-mode .logo {
     margin-left: 15px;
     font-size: 1em;
     transition: background-color 0.3s ease;
+    margin-right: 20px;
 }
 
 /* Botones en modo oscuro */
