--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -5,19 +5,18 @@
     --color-background-dark: #000000;
     --color-text-dark: #ffffff;
     --color-accent-light: #8BCD3A;
-    --color-accent-dark: rgb(139, 205, 58); /* Color alternativo para modo oscuro */
+    --color-accent-dark: rgb(139, 205, 58); 
     --color-button-light: #8BCD3A;
     --color-button-dark: rgb(139, 205, 58);
 }
 
-/* From Uiverse.io by Randdose */
 .custom-button {
     all: unset;
     display: flex;
     align-items: center;
     position: relative;
     padding: 0.6em 2em;
-    border: mediumspringgreen solid 0.15em;
+    border: rgb(139, 205, 58) solid 0.15em;
     border-radius: 0.25em;
     color: mediumspringgreen;
     font-size: 1.5em;
