--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -16,9 +16,9 @@
     align-items: center;
     position: relative;
     padding: 0.6em 2em;
-    border: rgb(139, 205, 58) solid 0.15em;
+    border: mediumspringgreen solid 0.15em;
     border-radius: 0.25em;
-    color: mediumspringgreen;
+    color: rgb(139, 205, 58);
     font-size: 1.5em;
     font-weight: 600;
     cursor: pointer;
