--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -45,7 +45,7 @@
     position: absolute;
     width: 9em;
     aspect-ratio: 1;
-    background: mediumspringgreen;
+    background: rgb(139, 205, 58);
     opacity: 50%;
     border-radius: 50%;
     transition: transform 500ms, background 300ms;
