--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -16,7 +16,7 @@
     align-items: center;
     position: relative;
     padding: 0.6em 2em;
-    border: mediumspringgreen solid 0.15em;
+    border: rgb(139, 205, 58) solid 0.15em;
     border-radius: 0.25em;
     color: rgb(139, 205, 58);
     font-size: 1.5em;
