--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -10,68 +10,93 @@
     --color-button-dark: rgb(139, 205, 58);
 }
 
-.custom-button {
-    all: unset;
+/* Button register-dashboard*/
+#button-betas {
+    position: relative;
     display: flex;
     align-items: center;
-    position: relative;
-    padding: 0.6em 2em;
-    border: rgb(139, 205, 58) solid 0.15em;
-    border-radius: 0.25em;
-    color: rgb(139, 205, 58);
-    font-size: 1.5em;
+    gap: 4px;
+    padding: 16px 36px;
+    border: 4px solid;
+    border-color: transparent;
+    font-size: 16px;
+    background-color: inherit;
+    border-radius: 100px;
     font-weight: 600;
+    color: greenyellow;
+    box-shadow: 0 0 0 2px greenyellow;
     cursor: pointer;
     overflow: hidden;
-    transition: border 300ms, color 300ms;
-    user-select: none;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
   }
   
-  .custom-button p {
-    z-index: 1;
-  }
-  
-  .custom-button:hover {
-    color: #212121;
-  }
-  
-  .custom-button:active {
-    border-color: teal;
-  }
-  
-  .custom-button::after,
-  .custom-button::before {
-    content: "";
+  #button-betas svg {
     position: absolute;
-    width: 9em;
-    aspect-ratio: 1;
-    background: rgb(139, 7, 255);
-    opacity: 50%;
+    width: 24px;
+    fill: greenyellow;
+    z-index: 9;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  #button-betas .arr-1 {
+    right: 16px;
+  }
+  
+  #button-betas .arr-2 {
+    left: -25%;
+  }
+  
+  #button-betas .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: greenyellow;
     border-radius: 50%;
-    transition: transform 500ms, background 300ms;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
   }
   
-  .custom-button::before {
-    left: 0;
-    transform: translateX(-8em);
+  #button-betas .text {
+    position: relative;
+    z-index: 1;
+    transform: translateX(-12px);
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
   }
   
-  .custom-button::after {
-    right: 0;
-    transform: translateX(8em);
+  #button-betas:hover {
+    box-shadow: 0 0 0 12px transparent;
+    color: #212121;
+    border-radius: 12px;
   }
   
-  .custom-button:hover::before {
-    transform: translateX(-1em);
+  #button-betas:hover .arr-1 {
+    right: -25%;
   }
   
-  .custom-button:hover::after {
-    transform: translateX(1em);
+  #button-betas:hover .arr-2 {
+    left: 16px;
   }
   
-  .custom-button:active::before,
-  .custom-button:active::after {
-    background: teal;
+  #button-betas:hover .text {
+    transform: translateX(12px);
+  }
+  
+  #button-betas:hover svg {
+    fill: #212121;
+  }
+  
+  #button-betas:active {
+    scale: 0.95;
+    box-shadow: 0 0 0 4px greenyellow;
+  }
+  
+  #button-betas:hover .circle {
+    width: 220px;
+    height: 220px;
+    opacity: 1;
   }
   
 
