--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -11,19 +11,17 @@
 }
 
 /* Button register-dashboard*/
-/* From Uiverse.io by gharsh11032000 */
 #button-betas {
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center; /* Centra el contenido */
     gap: 4px;
-    padding: 8px 16px; /* Ajusta el padding para hacerlo más pequeño */
-    border: 2px solid;
+    padding: 16px 36px;
+    border: 4px solid;
     border-color: transparent;
-    font-size: 14px; /* Tamaño de fuente más pequeño */
+    font-size: 16px;
     background-color: inherit;
-    border-radius: 8px; /* Bordes ligeramente redondeados para mantener la forma rectangular */
+    border-radius: 100px;
     font-weight: 600;
     color: greenyellow;
     box-shadow: 0 0 0 2px greenyellow;
@@ -34,14 +32,14 @@
   
   #button-betas svg {
     position: absolute;
-    width: 16px; /* Reduce el tamaño del ícono */
+    width: 24px;
     fill: greenyellow;
     z-index: 9;
     transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
   }
   
   #button-betas .arr-1 {
-    right: 8px; /* Ajusta la posición de las flechas */
+    right: 16px;
   }
   
   #button-betas .arr-2 {
@@ -53,8 +51,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 10px; /* Reduce el tamaño del círculo */
-    height: 10px;
+    width: 20px;
+    height: 20px;
     background-color: greenyellow;
     border-radius: 50%;
     opacity: 0;
@@ -64,14 +62,14 @@
   #button-betas .text {
     position: relative;
     z-index: 1;
-    transform: translateX(-8px); /* Ajusta el desplazamiento del texto */
+    transform: translateX(-12px);
     transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
   }
   
   #button-betas:hover {
-    box-shadow: 0 0 0 8px transparent; /* Reduce el tamaño de la sombra */
+    box-shadow: 0 0 0 12px transparent;
     color: #212121;
-    border-radius: 8px; /* Mantén la forma rectangular */
+    border-radius: 12px;
   }
   
   #button-betas:hover .arr-1 {
@@ -79,11 +77,11 @@
   }
   
   #button-betas:hover .arr-2 {
-    left: 8px;
+    left: 16px;
   }
   
   #button-betas:hover .text {
-    transform: translateX(8px); /* Ajusta el desplazamiento del texto */
+    transform: translateX(12px);
   }
   
   #button-betas:hover svg {
@@ -92,15 +90,14 @@
   
   #button-betas:active {
     scale: 0.95;
-    box-shadow: 0 0 0 2px greenyellow; /* Reduce el tamaño de la sombra cuando se activa */
+    box-shadow: 0 0 0 4px greenyellow;
   }
   
   #button-betas:hover .circle {
-    width: 100px; /* Reduce el tamaño del círculo */
-    height: 100px;
+    width: 220px;
+    height: 220px;
     opacity: 1;
   }
-  
   
 
 /* LOGOUT BETA */ 
