--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -455,74 +455,62 @@ body.dark-mode #theme-icon {
 }
 
 /* Benefits Section */
-/* From Uiverse.io by samuelfcosta18 */ 
-section.card {
-  position: relative;
-  width: 350px;
-  height: 200px;
-  background-color: #474dc3;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  perspective: 1000px;
-  transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-.card svg {
-  fill: #333;
-  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  border-radius: 3px;
-}
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 16px #000000;
-  background-color: #474dc3;
-  color: #ffffff;
+.benefits {
+    padding: 80px 20px;
+    background-color: #f1f1f1;
+    text-align: center;
+    animation: fadeIn 1.5s ease-in-out forwards;
 }
 
-.card__content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: #474dc3;
-  transform: rotateX(-90deg);
-  transform-origin: bottom;
-  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+body.dark-mode .benefits {
+    background-color: #222;
 }
 
-.card:hover .card__content {
-  transform: rotateX(0deg);
+.benefits h2 {
+    font-size: 2.5em;
+    margin-bottom: 50px;
+    position: relative;
 }
 
-.card__title {
-  margin: 0;
-  padding-left: 5px;
-  font-size: 24px;
-  color: var(--white);
-  font-weight: 700;
+.benefit-item {
+    display: inline-block;
+    width: 300px;
+    padding: 20px;
+    margin: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card:hover svg {
-  scale: 0;
+body.dark-mode .benefit-item {
+    background-color: #333;
+    color: var(--color-text-dark);
 }
 
-.card__description {
-  margin: 10px 0 0;
-  font-size: 14px;
-  color: #ffffff;
-  line-height: 1.4;
+.benefit-item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
 }
-/* Commands to change the shadows in dark mode
-@media (prefers-color-scheme: dark) {
-  .card:hover {
-  box-shadow: 0 8px 16px #000000;
-  }
-}*/
+
+.benefit-item img {
+    width: 80px;
+    margin-bottom: 20px;
+}
+
+.benefit-item h3 {
+    font-size: 1.8em;
+    margin-bottom: 10px;
+}
+
+.benefit-item p {
+    font-size: 1em;
+    color: #666;
+}
+
+body.dark-mode .benefit-item p {
+    color: #aaa;
+}
 
 /* Testimonials Section */
 .testimonials {
