--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -1086,18 +1086,26 @@ body.dark-mode .faq-item p {
   height: 140px;
   position: relative;
 }
+
 .loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.8); 
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  z-index: 9999;
 }
 
 .loader {
-  width: 100px; 
-  height: 70px; 
-  --duration: 2s; 
+  width: 100px;
+  height: 70px;
+  --duration: 4s;
 }
+
 
 .loader:before, .loader:after {
   --r: -6deg;
