--- a/assets/css/style-footer.css
+++ b/assets/css/style-footer.css
@@ -1,20 +1,3 @@
-.footer-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.footer-container p {
+.footer {
     font-family: Impact, sans-serif;
-    margin: 0;
-}
-
-.social-icons {
-    display: flex;
-    align-items: center;
-}
-
-/* Ajustes específicos para el icono */
-.loader {
-    margin-left: 10px; /* Espacio entre el texto y el icono */
 }
