--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -27,7 +27,7 @@
 }
 
 .logo:hover {
-    color: #0056b3;
+    color: #8BCD3A;
 }
 
 /* Estilos para los botones */
@@ -37,7 +37,7 @@
 }
 
 .header-btn {
-    background-color: #007BFF;
+    background-color: #00b309;
     color: #fff;
     border: none;
     padding: 10px 15px;
@@ -49,7 +49,7 @@
 }
 
 .header-btn:hover {
-    background-color: #0056b3;
+    background-color: #00b309;
 }
 
 /* Estilos para el nombre del usuario */
