--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -113,7 +113,7 @@ body {
 }
 
 body.dark-mode {
-    background-color: var(--color-background-dark);
+    background: linear-gradient(45deg, #333, #000);
     color: var(--color-text-dark);
 }
 
@@ -143,6 +143,10 @@ button {
     animation: fadeIn 2s ease-in-out;
 }
 
+body.dark-mode .login-main {
+    background: linear-gradient(45deg, #333, #111);
+}
+
 .login-container {
     background-color: #fff;
     border-radius: 15px;
@@ -154,11 +158,20 @@ button {
     animation: fadeInUp 1.5s ease-in-out;
 }
 
+body.dark-mode .login-container {
+    background-color: #222;
+    box-shadow: 0 10px 20px rgba(255, 255, 255, 0.1);
+}
+
 h2 {
     font-size: 2.5rem;
     color: var(--color-accent-light);
     margin-bottom: 20px;
     animation: slideInFromLeft 1.5s ease;
+}
+
+body.dark-mode h2 {
+    color: var(--color-accent-dark);
 }
 
 .login-container p {
@@ -171,8 +184,16 @@ h2 {
     transition: color 0.3s ease;
 }
 
+body.dark-mode .login-container a {
+    color: var(--color-accent-dark);
+}
+
 .login-container a:hover {
     color: #69a32b;
+}
+
+body.dark-mode .login-container a:hover {
+    color: rgb(102, 150, 43);
 }
 
 form {
@@ -247,6 +268,10 @@ body.dark-mode .login-btn {
 .login-btn:hover {
     background-color: #69a32b;
     transform: scale(1.05);
+}
+
+body.dark-mode .login-btn:hover {
+    background-color: rgb(102, 150, 43);
 }
 
 .login-btn:active {
