--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -1156,8 +1156,8 @@ body.dark-mode .faq-item p {
   color: var(--c);
   opacity: var(--o);
   transform: rotateY(var(--r));
-  -webkit-animation: var(--duration) ease infinite;
   animation: var(--duration) ease infinite;
+  animation-duration: 3s; /* Añadido */
 }
 
 .loader div ul li:nth-child(2) {
@@ -1214,20 +1214,16 @@ body.dark-mode .faq-item p {
     transform: rotateY(180deg);
     opacity: 0;
   }
-
   20% {
     opacity: 1;
   }
-
   35%, 100% {
     opacity: 0;
   }
-
   50%, 100% {
     transform: rotateY(0deg);
   }
 }
-
 @keyframes page-3 {
   15% {
     transform: rotateY(180deg);
